# request-catcher

./: .dockerignore  .gitignore  AGENT.md  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: release.yml
src/: lib.rs  main.rs
static/: bucket.html  index.html
tests/integration/: README.md  integration_tests.rs
tests/ui/: generate_test_data.py
