[package]
name = "request_catcher"
version = "0.3.1"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
actix-cors = "0.7"
actix-files = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
subtle = "2.5"

[profile.release]
lto = "thin"
codegen-units = 16
strip = true
panic = 'abort'
opt-level = 3
